# struck

./: .gitignore  CMakeLists.txt  config.txt  demo.sh  questions.md  run_experiments.sh
analyze/: CMakeLists.txt  bounding_box.h  ctype.h  iou.h  main.cpp
results/: comparison.csv  comparison.data  fuzzy_struck.csv  graphs.gnu  original_struck.csv
results/original/: coke11.boxes  coke11.ious  david.boxes  david.ious  faceocc.boxes  faceocc.ious  faceocc2.boxes  faceocc2.ious  girl.boxes  girl.ious  sylv.boxes  sylv.ious  tiger1.boxes  tiger1.ious  tiger2.boxes  tiger2.ious
src/: Config.cpp  Config.h  Features.cpp  Features.h  HaarFeature.cpp  HaarFeature.h  HaarFeatures.cpp  HaarFeatures.h  HistogramFeatures.cpp  HistogramFeatures.h  ImageRep.cpp  ImageRep.h  Kernels.h  LaRank.cpp  LaRank.h  MultiFeatures.cpp  MultiFeatures.h  RawFeatures.cpp  RawFeatures.h  Rect.h  Sample.h  Sampler.cpp  Sampler.h  Tracker.cpp  Tracker.h  fuzzy_larank.cpp  fuzzy_larank.h  loss_function.h  loss_manipulator.h  main.cpp  sift_features.cpp  sift_features.h
src/GraphUtils/: GraphUtils.cpp  GraphUtils.h
tests/: CMakeLists.txt  rect_test.cpp
